--- a/WebUi/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebUi/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,6 +11,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link text-dark" [routerLink]="['/question']">Add question</a>
+          </li>
         </ul>
       </div>
     </div>
