--- a/WebUi/ClientApp/src/styles.css
+++ b/WebUi/ClientApp/src/styles.css
@@ -17,3 +17,5 @@ code {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
