Moved away from HomeComponent -> QuestionsListComponent

--- a/WebUi/ClientApp/src/app/components/sidebar/sidebar.component.html
+++ b/WebUi/ClientApp/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,10 @@
 <div class="sidebar">
-  <div *ngFor="let category of categories">
-    <a href="{{ category.id }}"></a>
+  <h3>Kategorier</h3>
+  <div *ngFor="let category of (categories$ | async)">
+    <a [routerLink]="['/category/', category.id]">{{ category.name }}</a>
     <ul>
-      <li *ngFor="let question of category.question">
-        <a href="{{ question.id }}"></a>
+      <li *ngFor="let question of category.questions">
+        <a [routerLink]="['/question/', question.id]">{{ question.name }}</a>
       </li>
     </ul>
   </div>
