Deleted home-componenet since it's not in use anymore

--- a/WebUi/ClientApp/src/app/category-detailed/category-detailed.component.html
+++ b/WebUi/ClientApp/src/app/category-detailed/category-detailed.component.html
@@ -1,3 +1,10 @@
-<p>
-  category-detailed works!
-</p>
+<div class="row flex-xl-nowrap">
+  <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content">
+      <p>
+        category-detailed works!
+      </p>
+    </div>      
+</div>
