Fixed sidebar elements problem
Fixed the problem where I couldn't display the questions related to the category

--- a/WebUi/ClientApp/src/app/components/sidebar/sidebar.component.html
+++ b/WebUi/ClientApp/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <a [routerLink]="['/category/', category.id]">{{ category.name }}</a>
     <ul>
       <li *ngFor="let question of category.questions">
-        <a [routerLink]="['/question/', question.id]">{{ question.name }}</a>
+        <a [routerLink]="['/question/', question.id]">{{ question.message }}</a>
       </li>
     </ul>
   </div>
