--- a/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
+++ b/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
@@ -1,6 +1,5 @@
 <div class="container" [hidden]="submitted">
   <h1>Question form</h1>
-  
   <form [formGroup]="userQuestionForm" (ngSubmit)="onSubmit()">
       <input class="form-control" formControlName="id" type="hidden" />
       <div class="form-group">
@@ -27,15 +26,15 @@
       </div>
       <div class="form-group">
           <label>Kategori</label>
-          <select class="form-control" id="category" formControlName="category">
+          <select class="form-control" id="categoryId" formControlName="categoryId">
           <option *ngFor="let category of categories" [value]="category.categoryId">{{category.name}}</option>
         </select>
-          <p class="alert alert-warning" [hidden]="userQuestionForm.controls.category.valid || (userQuestionForm.controls.category.pristine && !submitted)">
+          <p class="alert alert-warning" [hidden]="userQuestionForm.controls.categoryId.valid || (userQuestionForm.controls.categoryId.pristine && !submitted)">
               Kategori er obligatorisk
           </p>
       </div>
       <div class="form-group">
-        <button class="btn btn-success" type="submit" [disabled]="!skjema.valid">Send inn</button>
+        <button class="btn btn-success" type="submit" [disabled]="!userQuestionForm.valid">Send inn</button>
         <button class="btn btn-default" (click)="resetForm()">Reset felter</button>
       </div>
   </form>
