--- a/VyKundeservice/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/VyKundeservice/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,6 +11,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Hjem</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
+              <a class="nav-link text-dark" [routerLink]="['/userquestions']">User questions</a>
+            </li>
         </ul>
       </div>
     </div>
