--- a/VyKundeservice/ClientApp/src/app/user-question-list/user-question-list.component.html
+++ b/VyKundeservice/ClientApp/src/app/user-question-list/user-question-list.component.html
@@ -1,5 +1,24 @@
 <div class="container">
   <div class="row">
-    <p>Hello world</p>
+    <ul class="list-group width-100">
+
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Navn</th>
+            <th scope="col">Spørsmål</th>
+            <th scope="col">Kategori</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let userQuestion of userQuestionList">
+            <td>{{ userQuestion.firstname + ' ' + userQuestion.lastname }}</td>
+            <td>{{ userQuestion.question }}</td>
+            <td>{{ userQuestion.category.name }}</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </ul>
   </div>
 </div>
