Updated Todo, and removed unnessesary code

--- a/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
+++ b/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
@@ -1,41 +1,42 @@
 <div class="container" [hidden]="submitted">
-  <h1>Question form</h1>
-  <form [formGroup]="userQuestionForm" (ngSubmit)="onSubmit()">
-      <input class="form-control" formControlName="id" type="hidden" />
-      <div class="form-group">
-          <label>Fornavn</label>
-          <input class="form-control" formControlName="firstname" />
-          <p class="alert alert-warning" [hidden]="userQuestionForm.controls.firstname.valid || (userQuestionForm.controls.firstname.pristine && !submitted)">
-             Fornavn er obligatorisk.
-          </p>
-      </div>
-      <div class="form-group">
-          <label>Etternavn</label>
-          <input class="form-control" formControlName="lastname" />
-          <p class="alert alert-warning"
-              [hidden]="userQuestionForm.controls.lastname.valid || userQuestionForm.controls.lastname.pristine">
-              Etternavn er obligatorisk.
-          </p>
-      </div>
-      <div class="form-group">
-          <label>Spørsmål</label>
-          <input class="form-control" formControlName="question" />
-          <p class="alert alert-warning" [hidden]="userQuestionForm.controls.question.valid || (userQuestionForm.controls.question.pristine && !submitted)">
-              Spørsmål er obligatorisk.
-          </p>
-      </div>
-      <div class="form-group">
-          <label>Kategori</label>
-          <select class="form-control" id="categoryId" formControlName="categoryId">
-          <option *ngFor="let category of categories" [value]="category.categoryId">{{category.name}}</option>
-        </select>
-          <p class="alert alert-warning" [hidden]="userQuestionForm.controls.categoryId.valid || (userQuestionForm.controls.categoryId.pristine && !submitted)">
-              Kategori er obligatorisk
-          </p>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-success" type="submit" [disabled]="!userQuestionForm.valid">Send inn</button>
-        <button class="btn btn-default" (click)="resetForm()">Reset felter</button>
-      </div>
-  </form>
+    <h1>Question form</h1>
+    <form [formGroup]="userQuestionForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="col">
+                    <label>Fornavn</label>
+                    <input class="form-control" formControlName="firstname" />
+                    <p class="alert alert-warning" [hidden]="userQuestionForm.controls.firstname.valid || (userQuestionForm.controls.firstname.pristine && !submitted)">
+                        Fornavn er obligatorisk.
+                    </p>
+                </div>
+                <div class="col">
+                    <label>Etternavn</label>
+                    <input class="form-control" formControlName="lastname" />
+                    <p class="alert alert-warning"
+                        [hidden]="userQuestionForm.controls.lastname.valid || userQuestionForm.controls.lastname.pristine">
+                        Etternavn er obligatorisk.
+                    </p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Spørsmål</label>
+                <input class="form-control" formControlName="question" />
+                <p class="alert alert-warning" [hidden]="userQuestionForm.controls.question.valid || (userQuestionForm.controls.question.pristine && !submitted)">
+                    Spørsmål er obligatorisk.
+                </p>
+            </div>
+            <div class="form-group">
+                <label>Kategori</label>
+                <select class="form-control" id="categoryId" formControlName="categoryId">
+                    <option *ngFor="let category of categories" [value]="category.categoryId">{{category.name}}</option>
+                </select>
+                <p class="alert alert-warning" [hidden]="userQuestionForm.controls.categoryId.valid || (userQuestionForm.controls.categoryId.pristine && !submitted)">
+                    Kategori er obligatorisk
+                </p>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success" type="submit" [disabled]="!userQuestionForm.valid">Send inn</button>
+                <button class="btn btn-default" (click)="resetForm()">Reset felter</button>
+            </div>
+    </form>
 </div>
