--- a/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
+++ b/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-success" type="submit" [disabled]="!userQuestionForm.valid">Send inn</button>
-                <button class="btn btn-default" (click)="resetForm()">Reset felter</button>
+                <button class="btn btn-default" (click)="resetForm()">Nullstill felter</button>
             </div>
         </form>
     </div>
