--- a/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
+++ b/VyKundeservice/ClientApp/src/app/question-form/question-form.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-primary question-button" type="button" data-toggle="collapse" data-target="#questionForm" aria-expanded="false" aria-controls="questionForm">
-    Still spørsmål
+    Still et nytt spørsmål
 </button>
 <div class="collapse" id="questionForm">
     <div class="card card-body">
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-success" type="submit" [disabled]="!userQuestionForm.valid">Send inn</button>
-                <button class="btn btn-default" (click)="resetForm()">Nullstill felter</button>
+                <button type="reset" class="btn btn-default" (click)="resetForm()">Nullstill felter</button>
             </div>
         </form>
     </div>
